<resources>
    <string name="app_name">Zebra Printer EU Red Setup</string>
    <string name="title_connectivity">Connectivity</string>
    <string name="title_security">Security</string>
    <string name="title_status">Status</string>
    <string name="title_setup_bluetooth">Setup Bluetooth</string>
    <string name="title_setup_printer">Setup Printer</string>
    <string name="title_bluetooth_test">Bluetooth Test</string>
    <string name="label_connectivity_type">Connectivity Type</string>
    <string name="label_printer_mac_address">Printer Mac Address</string>
    <string name="label_old_password">Old Secure Password</string>
    <string name="label_new_password">New Secure Password</string>
    <string name="label_password_current">Password Current</string>
    <string name="label_http_admin_password">Http Admin Password</string>
    <string name="hint_mac_address">Enter printer MAC Address here</string>
    <string name="hint_old_password">Keep empty if new hardware</string>
    <string name="hint_new_password">Define new password</string>
    <string name="hint_http_admin_password">Set HTTP admin password</string>
    <string name="helper_old_password">Leave blank if setting up a new hardware</string>
    <string name="helper_new_password">Set here the new admin password</string>
    <string name="helper_password_current">Enter the current display password</string>
    <string name="helper_http_admin_password">Set here the new HTTP admin password</string>
    <string name="button_set_bluetooth_discoverable">Set Bluetooth Discoverable</string>
    <string name="button_send_script_to_printer">Send Script To Printer</string>
    <string name="button_test_label">Test Label</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_grant_permissions">Grant Permissions</string>
    <string name="status_ready">Ready</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_connecting_dots">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_comm_error_disconnecting">Comm Error! Disconnecting</string>
    <string name="status_determining_printer_language">Determining Printer Language</string>
    <string name="status_printer_language">Printer Language %1$s</string>
    <string name="status_unknown_printer_language">Unknown Printer Language</string>
    <string name="status_sending_data">Sending Data</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_not_connected">Not Connected</string>
    <string name="status_comm_error_disconnected">COMM Error! Disconnected</string>
    <string name="status_setup_completed">Setup completed successfully!</string>
    <string name="status_test_label_sent">Test label sent successfully!</string>
    <string name="status_saving_settings">Saving settings…</string>
    <string name="status_settings_saved">Settings saved successfully!</string>
    <string name="status_settings_invalid">Settings not saved - check password requirements</string>
    <string name="status_permission_granted">USB Permission Granted</string>
    <string name="error_mac_address_required">MAC address is required</string>
    <string name="error_mac_address_invalid">Invalid MAC address format (XX:XX:XX:XX:XX:XX)</string>
    <string name="error_valid_mac_address_required">Valid MAC address is required</string>
    <string name="error_min_characters_required">Minimum %1$d characters required (%2$d more needed)</string>
    <string name="permissions_required_title">Permissions Required</string>
    <string name="permissions_required_message">These permissions are needed to connect to the printer</string>
    <string name="content_description_expand_collapse">Expand/Collapse</string>
    <string name="content_description_entry_icon">Entry icon</string>
    <string name="content_description_back">Go back</string>
    <string name="content_description_scan_barcode">Scan barcode</string>
    <string name="content_description_clear_old_password">Clear old password</string>
    <string name="content_description_scan_old_password">Scan old password</string>
    <string name="content_description_use_default_password">Use default password</string>
    <string name="content_description_scan_new_password">Scan new password</string>
    <string name="content_description_scan_http_admin_password">Scan HTTP admin password</string>
    <string name="content_description_scan_auth_password">Scan authentication password</string>
    <string name="content_description_clear_auth_password">Clear authentication password</string>
    <string name="content_description_clear_password_current">Clear password current</string>
    <string name="content_description_scan_password_current">Scan password current</string>
    <string name="content_description_toggle_flash">Toggle flash</string>
    <string name="content_description_toggle_immersive">Toggle immersive mode</string>
    <string name="content_description_drag_resize">Drag to resize</string>
    <string name="content_description_toggle_script">Toggle script visibility</string>
    <string name="content_description_drag_reorder">Drag to reorder</string>
    <string name="scanner_hint">Point camera at barcode</string>
    <string name="nav_home">Home</string>
    <string name="nav_custom_script">Custom Script</string>
    <string name="nav_advanced">Advanced</string>
    <string name="nav_factory_reset">Factory Reset</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="launcher_subtitle">Select a feature to get started</string>
    <string name="launcher_eu_red_setup">EURed Setup</string>
    <string name="title_setup">Customize Script</string>
    <string name="button_setup_script">Change Script Parameters</string>
    <string name="launcher_eu_red_description">Configure EU Radio Equipment Directive settings</string>
    <string name="launcher_custom_script_description">Write and send custom ZPL scripts</string>
    <string name="launcher_documentation_description">Search ZPL, SGD, and ZBI commands</string>
    <string name="launcher_settings_description">Configure passwords and options</string>
    <string name="launcher_advanced_description">Factory reset and advanced printer tools</string>
    <string name="launcher_about_description">App version and information</string>
    <string name="hint_search_features">Search features...</string>
    <string name="title_advanced_tools">Advanced Tools</string>
    <string name="desc_factory_reset">Reset printer to factory defaults via USB</string>
    <string name="nav_script_documentation">Script Documentation</string>
    <string name="hint_search_documentation">Search commands…</string>
    <string name="label_filter">Filter:</string>
    <string name="filter_zpl">ZPL</string>
    <string name="filter_sgd">SGD</string>
    <string name="filter_zbi">ZBI</string>
    <string name="filter_snippets">Snippets</string>
    <string name="label_commands_found">%1$d commands found</string>
    <string name="message_no_commands_found">No commands found</string>
    <string name="content_description_no_results">No results</string>
    <string name="label_format">Format</string>
    <string name="label_description">Description</string>
    <string name="label_parameters">Parameters</string>
    <string name="label_returns">Returns</string>
    <string name="label_supported_actions">Supported Actions</string>
    <string name="label_possible_values">Possible Values</string>
    <string name="label_default_value">Default Value</string>
    <string name="label_page_number">Page %1$d</string>
    <string name="error_loading_documentation">Error loading documentation: %1$s</string>
    <string name="label_suggestions">Suggestions</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_http_admin_password">Set HTTP Admin Password</string>
    <string name="label_enable">Enable</string>
    <string name="label_enabled">Enabled</string>
    <string name="label_auth_password">Password</string>
    <string name="helper_auth_password">Enter authentication password</string>
    <string name="label_language">Language</string>
    <string name="language_system">System Language</string>
    <string name="language_en">English</string>
    <string name="language_fr">Français</string>
    <string name="language_ar">العربية</string>
    <string name="language_it">Italiano</string>
    <string name="language_es">Español</string>
    <string name="language_zh">中文</string>
    <string name="language_pt">Português</string>
    <string name="language_vi">Tiếng Việt</string>
    <string name="language_de">Deutsch</string>
    <string name="language_hi">हिन्दी</string>
    <string name="language_ur">اردو</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_developer">Developed by Laurent Trudu</string>
    <string name="about_copyright">Copyright 2026 Zebra Technologies</string>
    <string name="about_github">View on GitHub</string>
    <string name="about_github_url">https://github.com/ltrudu/EuREDBluetoothEnabler</string>
    <string name="advanced_mode_warning_title">Warning - Advanced Mode</string>
    <string name="advanced_mode_warning_message">You\'re about to enable advanced mode with functionalities that could brick your printer.\n\nZebra Technologies declines all responsibility for the usage of advanced features.\n\nUsing these features may void your warranty.\n\nUse them at your own risk and peril.</string>
    <string name="advanced_mode_enabled">Advanced mode enabled</string>
    <string name="edit_mode_enabled">Edit mode enabled</string>
    <string name="button_i_understand">I Understand the Risks</string>
    <string name="about_dependencies">Dependencies</string>
    <string name="about_view_project">View Project</string>
    <string name="about_zxing_name">ZXing Android Embedded</string>
    <string name="about_zxing_version">Version 4.3.0</string>
    <string name="about_zxing_license">Apache License 2.0</string>
    <string name="about_zebra_sdk_name">Zebra Link-OS SDK</string>
    <string name="about_zebra_sdk_desc">Multiplatform SDK for Zebra Printers</string>
    <string name="about_zebra_sdk_license">Zebra Technologies License</string>
    <string name="about_room_name">AndroidX Room</string>
    <string name="about_room_version">Version 2.6.1</string>
    <string name="about_room_license">Apache License 2.0</string>
    <string name="connectivity_bluetooth">Bluetooth</string>
    <string name="connectivity_usb">USB</string>
    <string name="button_confirm">Confirm</string>
    <string name="dialog_factory_reset_title">Factory Reset Warning</string>
    <string name="dialog_factory_reset_warning">This operation may take up to 10 minutes and is NOT reversible!</string>
    <string name="dialog_factory_reset_message1">All settings and configuration will be lost.</string>
    <string name="dialog_factory_reset_message2">All parameters will be factory reset.</string>
    <string name="dialog_factory_reset_message3">DO NOT UNPLUG the printer during the process!</string>
    <string name="dialog_factory_reset_message4">Do not reset the printer while it is blinking/flashing.</string>
    <string name="dialog_factory_reset_message5">Are you sure you want to proceed?</string>
    <string name="hint_entry_title">Title</string>
    <string name="hint_entry_description">Description</string>
    <string name="label_script">Script</string>
    <string name="script_status_empty">No script defined</string>
    <string name="button_edit_script">Edit Script</string>
</resources>