<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_custom_script"
            android:icon="@drawable/ic_custom_script"
            android:title="@string/nav_custom_script" />
        <item
            android:id="@+id/nav_factory_reset"
            android:icon="@drawable/ic_factory_reset"
            android:title="@string/nav_factory_reset" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>
</menu>
